# yamd-rr

./: README.md  meson.build
.github/workflows/: meson.yml
Jobs-bwcluster/: nanowires_10680_11340_13900.sh  nanowires_7680_9540.sh  nanowires_840_3120_6950.sh  nanowires_large.sh  nanowires_large_strain.sh  nanowires_large_temp.sh
Plot_codes/Energy_conservation/: 0.0001_Etot_file.csv  0.001_Etot_file.csv  0.002_Etot_file.csv  0.005_Etot_file.csv  0.01_Etot_file.csv  0.02_Etot_file.csv  0.05_Etot_file.csv  00.001_Etot_file.csv  Energy_MPI.csv  Non-Equillibrated-Energy.py  plot_energy_milestone04.py  plot_energy_milestone08.py  plot_energy_tot_vs_del_t.py
Plot_codes/ExecTime/: plot_energy_milestone05.py  run_time_berendsen.csv  run_time_with_rc.csv
Plot_codes/MeltingPoint/: 10179EvsT.csv  1415EvsT.csv  147EvsT.csv  2869EvsT.csv  309EvsT.csv  3871EvsT.csv  55EvsT.csv  561EvsT.csv  6525EvsT.csv  923EvsT.csv  Cp.py  MP.py  plot_energy_milestone07.py
Plot_codes/Nano-Wires/: Stress-Strain_NumAtom.py  Stress-Strain_StrainRate.py  Stress-Strain_Temp.py  Stress-Strain_Young'sModulus.py
Plot_codes/Nano-Wires/Whiskers/: make_whisker.py  whisker_10680.data  whisker_11340.data  whisker_13900.data  whisker_3120.data  whisker_6950.data  whisker_7680.data  whisker_840.data  whisker_9540.data
Plot_codes/Nano-Wires/strain_stress_files/: 10680_1.0_0.0_svf.csv  11340_1.0_0.0_svf.csv  13900_1.0_0.0_svf.csv  3050_0.3_0.0_svf.csv  3050_0.3_300_svf.csv  3050_0.7_0.0_svf.csv  3050_1.0_0.0_svf.csv  3050_1.0_10.0_svf.csv  3050_1.0_20.0_svf.csv  3050_1.0_5.0_svf.csv  3050_1.0_50.0_svf.csv  3050_1.5_0.0_svf.csv  (+9 more)
milestones/: meson.build
milestones/07/: ih.C  meson.build
src/: Energy_conservation_LJunits.cpp  berendsen.cpp  berendsen_execution_time.cpp  berendsen_thermostat_simulation.cpp  domain.cpp  ducastelle.cpp  energy_conservation_mpi.cpp  equilibration_with_rc.cpp  gold_melting_point.cpp  gold_nanowire.cpp  lattice.cpp  lj_direct_summation.cpp  main.cpp  meson.build  neighbors.cpp  preheat_atom_cluster.cpp  verlet.cpp  xyz.cpp
src/data_files/: whisker_small_T0.xyz
src/data_files/icosahedrons/: 10179_traj.xyz  1415_traj.xyz  147_traj.xyz  2057_traj.xyz  2869_traj.xyz  309_traj.xyz  55_traj.xyz  561_traj.xyz  6525_traj.xyz
src/data_files/whiskers/: whisker_10680.xyz  whisker_11340.xyz  whisker_13900.xyz  whisker_3120.xyz  whisker_6950.xyz  whisker_7680.xyz  whisker_840.xyz  whisker_9540.xyz
src/header_files/: atoms.h  berendsen.h  ducastelle.h  functions.h  lattice.h  lj_direct_summation.h  preheat_atom_cluster.h  types.h  verlet.h  xyz.h
tests/: meson.build  test_berendsen.cpp  test_ducastelle.cpp  test_lj_direct_summation.cpp  test_neighbors.cpp  test_verlet_integrator.cpp
